redis önbellekleme eklendi,docker entegrasyonu yapıldı, servislerdeki çeşitli hatalar giderildi